# litmus-generator

./: .gitignore  .gitmodules  Makefile  README.md  code_gen.py  compile.sh  easyvk.h  easyvk.hpp  fib_gen.c  litmus-generator.py  litmus-setup-template.cpp  litmus-template.cpp  litmus-test-runner.py  litmusenv.py  litmusgenerator.py  litmustest.py  litmustestrunner.py  litmustesttuner.py  load-buffer.cpp  load-buffer.spv  old-compile.sh  old-test.cpp  old_compile.sh  opencllitmustest.py  playground.cpp  synthesized_hello_world.c  test.cl  test.cpp  test.spv  todo.txt  vector-add.cl  vuh-litmus-setup.cpp  vuh-litmus-template.cpp  vulkan-litmus-setup.cpp  vulkan-setup.cpp  vulkan-setup.hpp  vulkanlitmusgenerator.py  vulkanlitmussetup.py  vulkanlitmustest.py  wgsllitmusgenerator.py  (+1 more)
test-runner/: 2+2w-tuning.txt  Android.mk  Application.mk  CMakeLists.txt  Makefile  android-tune.sh  basic-parameters.txt  basic-params.txt  checker.h  iriw-tuning.txt  isa2-tuning.txt  lb-tuning.txt  message-passing-parallel.cl  message-passing-parallel.spv  message-passing-results.cl  message-passing-results.spv  message-passing-strong.cl  message-passing-strong.spv  message-passing.cl  message-passing.spv  parameters.txt  run-test.sh  runner.cpp  sb-tuning.txt  setup-android.sh  shaders.txt  stress-parameters.txt  stress-params.txt  test_runner.cpp  tune.sh  vect-add.spv  wrc-tuning.txt
test-runner/shaders/: 2+2-write-rel.spv  2+2-write-results.spv  2+2-write.spv  iriw-acq-rel.cl  iriw-acq-rel.spv  iriw-acq.cl  iriw-acq.spv  iriw-addr.cl  iriw-addr.spv  iriw-mem-device-params.txt  iriw.cl  (+53 more)
(+179 files in other folders)
